--- a/GameOfLife/GameOfLife.Tests/GameOfLife.Tests.csproj
+++ b/GameOfLife/GameOfLife.Tests/GameOfLife.Tests.csproj
@@ -50,6 +50,9 @@
     <Reference Include="xunit.extensions">
       <HintPath>..\packages\xunit.extensions.1.9.2\lib\net20\xunit.extensions.dll</HintPath>
     </Reference>
+    <Reference Include="xunit.runner.visualstudio.testadapter">
+      <HintPath>..\packages\xunit.runner.visualstudio.0.99.2\lib\xunit.runner.visualstudio.testadapter.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BoardTests.cs" />
